--- a/flexclient/dag/Components/singleNodeTQWidow.mxml
+++ b/flexclient/dag/Components/singleNodeTQWidow.mxml
@@ -3,12 +3,13 @@
 	showCloseButton="true" close="removeMe();" borderColor="#0000FF" backgroundColor="white" left="0" right="0" borderThicknessLeft="2" borderThicknessRight="2" borderThicknessBottom="2" borderThicknessTop="5">
 	<mx:Script>
 		<![CDATA[
+			import mx.events.ValidationResultEvent;
+			import mx.validators.StringValidator;
 		import mx.rpc.events.ResultEvent;
 		import mx.collections.ArrayCollection;
 		import Components.DAGConstants;
 		import mx.managers.PopUpManager;
-		import mx.controls.List;  
-		import mx.controls.Alert;
+		import mx.controls.List;		
 		 [Bindable]
 		 public var entityLabelString : String = null;	
 		
@@ -50,10 +51,7 @@
 	 	    
 	 	[Bindable]
 	 	private var timeIntrvalLabel : String = "Time" + "\n" + "Interval" ;
-	 	
-	 	[Bindable]
-     		private var myDropdownFactory:ClassFactory;
-     		
+	      		
      	private var existingTextBox : TextInput = null;	
         private var existingTimeIntervalCb : ComboBox = null;
 	    private var existingValueLabel : Label = null;
@@ -69,6 +67,10 @@
 		
 		private function submitData() : void
 		{
+			var flag:Boolean = validateColumnName();
+           	  if(flag == false) 
+           	  	 return;           	  	 
+           	  	 
 			var rhsTimeValue : String = "";
           	var rhsTimeIntervalValue : String =  "";
            	var customFormulaString : String = "";
@@ -332,8 +334,8 @@
                 comboBox.id = "cb5";
                 comboBox.name = "timeIntervalCb";
                 comboBox.width = 100;
-                comboBox.dropdownFactory = myDropdownFactory;
                 comboBox.dataProvider = timeIntervalsDp;
+                comboBox.rowCount = 10;
                 myBox.addChild(comboBox);
            }
 		}
@@ -400,54 +402,138 @@
            	 }
            	 
            	 return datePicker;
-		}
-		
-		private function initClassFactory():void
-		{
-			/**
-			 Creating the Drop down factory
-			*/
-						
-			myDropdownFactory = new ClassFactory(List);
-			myDropdownFactory.properties = {showDataTips:true, dataTipFunction:myDataTipFunction};
-		}
+		}		
            
         private function myDataTipFunction(item:Object):String
         { 
-            return String(item);
-       
+            return String(item);       
        
         }
+        
+        /**
+			   truncateLongText function is doing the truncatation of Label and create a elipses like "..." 
+			   and set value to comboBox text.  
+			*/				
+    		public function truncateLongText(e : Event):void{   
+    					 
+    			var txt:String = e.currentTarget.itemToLabel(e.currentTarget.selectedItem);  			
+    			e.currentTarget.toolTip=txt; 
+    			if(txt.length >= 11)
+    				e.currentTarget.text =  txt.substring(0,9).toString() + "...";    			 		   		       		    
+    		}
+    		
+    		/**
+    			validateComboboxText function is create to validate first element of arraylist
+    			here if a dropdown list contains only on item then it will show in comboBox as selected item
+    			if item length is more than 1 then i will show prompt like "-select-" and store item text to myToolTip variable for further refrence.    			 
+    		*/ 		
+    		public function validateComboboxText():void{     			   			
+    			 if(arithmeticOpDp.length <= 1){
+	    			 arithmaticOpsCb.selectedIndex = 0;
+	    			 arithmaticOpsCb.toolTip=arithmaticOpsCb.selectedLabel.toString();
+	    		 }else{
+    				arithmaticOpsCb.selectedIndex = -1;
+    				arithmaticOpsCb.toolTip=arithmaticOpsCb.selectedLabel.toString();
+	    		 }
+    			 
+    			 if(attributesDp.length <= 1){
+    				attributesCb.selectedIndex = 0;
+    				attributesCb.toolTip=attributesCb.selectedLabel.toString();
+    			 }else{
+    				attributesCb.selectedIndex = -1;
+    				attributesCb.toolTip=attributesCb.selectedLabel.toString();
+    			 }
+    			    			 
+    			 if(relationalDp.length <= 1){
+    				relationalOpsCb.selectedIndex = 0;
+    				relationalOpsCb.toolTip=relationalOpsCb.selectedLabel.toString();
+    			 }else{
+    				relationalOpsCb.selectedIndex = -1;
+    				relationalOpsCb.toolTip=relationalOpsCb.selectedLabel.toString();
+    			 }
+    			
+    			 if(timeIntervalsDp.length <= 1){
+    				timeIntervalCb.selectedIndex = 0;
+    				timeIntervalCb.toolTip=timeIntervalCb.selectedLabel.toString();
+    			 }else{
+    				timeIntervalCb.selectedIndex = -1;
+    				timeIntervalCb.toolTip=timeIntervalCb.selectedLabel.toString();
+    			 }
+    		}
+    		
+    		private function validateColumnName():Boolean{    			
+    			var strVal:StringValidator = new StringValidator();    			
+                strVal.source = customColumnName;
+                strVal.property = "text";
+                strVal.required = true;
+                
+                var event:ValidationResultEvent = strVal.validate();
+				var currentControlIsValid:Boolean = (event.type == ValidationResultEvent.VALID);
+				return currentControlIsValid;                                         	           	  				
+    		}    		    		
+			
+			/**
+    			createBigTip function is create a errorString which is displayed while validation messages appears.
+    			it will disable submitButton control.    			  
+    		*/ 	
+		    private function createBigTip(s:String):void {		      
+		      submitButton1.enabled=false;
+		      submitButton1.errorString = s;		           
+		    }
+			
+			/**
+    			destroyBigTip function is remove a errorString which was displayed while validation messages appears.
+    			it will enable submitButton control.    			  
+    		*/
+		    private function destroyBigTip():void {
+		      submitButton1.enabled=true;
+		      submitButton1.errorString="";		      
+		      
+		    }
 			
 		]]>
 	</mx:Script>
 	
-	<mx:VBox x="20" y="20"> 
+	<mx:VBox x="20" y="20" width="655"> 
 		 <!--Specifying Labels -->
-		<mx:HBox x="20" y="20" id="labelHBox">
-			<mx:Label id="leftDatePicker" name="leftDatePickerLabel" width="100" height="50"  text="{datePickerLabel}"  color="blue" fontStyle="normal" fontWeight="bold" buttonMode="true" />
-			<mx:Label id="arithmeticOpLabel" name="arithmeticOpLabel" width="100"  height="50" color="blue" text="{arithmeticLabel}" fontStyle="normal" fontWeight="bold" buttonMode="true"/>
-			<mx:Label id="entityLabel" name="entityLabel" width="100" height="50" color="blue" text="{entityLabelString}" fontStyle="normal" fontWeight="bold" buttonMode="true"/>
-	    	<mx:Label id="relationalOpsLabel" name="relationalOpsLabel" width="100" height="50" color="blue" text="{relationalLabel}" fontStyle="normal" fontWeight="bold" buttonMode="true" />
-	    	<mx:Label id="lb5" name="label5" width="100"  height="50" color="blue" text="{timeValueLabel}" fontStyle="normal" fontWeight="bold"/>
-	    	<mx:Label id="lb6" name="label6" width="100"  height="50" color="blue" text="{timeIntrvalLabel}" fontStyle="normal" fontWeight="bold"/>
+		<mx:HBox x="20" y="20" id="labelHBox" width="100%">
+			<mx:Label id="leftDatePicker" name="leftDatePickerLabel" width="100" height="30"  text="{datePickerLabel}"  color="blue" fontStyle="normal" fontWeight="bold" buttonMode="true" />
+			<mx:Label id="arithmeticOpLabel" name="arithmeticOpLabel" width="100"  height="30" color="blue" text="{arithmeticLabel}" fontStyle="normal" fontWeight="bold" buttonMode="true"/>
+			<mx:Label id="entityLabel" name="entityLabel" width="100" height="30" color="blue" text="{entityLabelString}" fontStyle="normal" fontWeight="bold" buttonMode="true"/>
+	    	<mx:Label id="relationalOpsLabel" name="relationalOpsLabel" width="100" height="30" color="blue" text="{relationalLabel}" fontStyle="normal" fontWeight="bold" buttonMode="true" />
+	    	<mx:Label id="lb5" name="label5" width="100"  height="30" color="blue" text="{timeValueLabel}" fontStyle="normal" fontWeight="bold"/>
+	    	<mx:Label id="lb6" name="label6" width="100"  height="30" color="blue" text="{timeIntrvalLabel}" fontStyle="normal" fontWeight="bold"/>
        </mx:HBox>
 	
 		<!--Specifying Controls -->
-		<mx:HBox id ="myBox" x="20" y="60">
-			<mx:DateField id="datePicker" name="leftDatePicker" width="100" showToday="true" formatString="MM/DD/YYYY" />
-			<mx:ComboBox id="arithmaticOpsCb" dataProvider="{arithmeticOpDp}" width="100"  textAlign="center" borderThickness="0" borderColor="blue" prompt="--Select--" change="validate()"/>
-			<mx:ComboBox id="attributesCb" dataProvider="{attributesDp}" width="100"  textAlign="center" borderThickness="0" borderColor="blue" prompt="--Select--"  change="validate()"/>		
-			<mx:ComboBox id="relationalOpsCb" dataProvider="{relationalDp}" width="100" borderThickness="0" borderColor="blue"  prompt="--Select--" dropdownFactory="{myDropdownFactory}" creationComplete="initClassFactory()"/>
+		<mx:HBox id ="myBox" x="20" y="60" width="100%">
+			<mx:DateField id="datePicker" name="leftDatePicker" width="100" showToday="true" 
+				formatString="MM/DD/YYYY" />
+			<mx:ComboBox id="arithmaticOpsCb" dataProvider="{arithmeticOpDp}" width="100"  textAlign="center" 
+				borderThickness="0" borderColor="blue" prompt="--Select--" change="validate()" 
+				itemRenderer="mx.controls.Label" rowCount="10" close="truncateLongText(event)" toolTip=""/>
+			<mx:ComboBox id="attributesCb" dataProvider="{attributesDp}" width="100"  textAlign="center" 
+				borderThickness="0" borderColor="blue" prompt="--Select--"  change="validate()" 
+				itemRenderer="mx.controls.Label" rowCount="10" close="truncateLongText(event)" toolTip=""/>		
+			<mx:ComboBox id="relationalOpsCb" dataProvider="{relationalDp}" width="100" 
+				borderThickness="0" borderColor="blue"  prompt="--Select--" itemRenderer="mx.controls.Label" 
+				rowCount="10" close="truncateLongText(event)" toolTip=""/>
 			<mx:TextInput id="timeInputBox" name="timeInputBox"  width="100" restrict="0-9" borderColor="blue" /> 
-	    	<mx:ComboBox id="timeIntervalCb" name="timeIntervalCb" dataProvider="{timeIntervalsDp}" width="100"  borderThickness="0" borderColor="blue" prompt="--Select--" dropdownFactory="{myDropdownFactory}" creationComplete="initClassFactory()"/>
+	    	<mx:ComboBox id="timeIntervalCb" name="timeIntervalCb" dataProvider="{timeIntervalsDp}" 
+	    		width="100"  borderThickness="0" borderColor="blue" prompt="--Select--" 
+	    		itemRenderer="mx.controls.Label" rowCount="10" close="truncateLongText(event)" toolTip=""/>
         </mx:HBox>
-        
-        <mx:HBox x="20">
-         <mx:Label id="columnLabel" width="330" text="Please Enter Column Name To Be Displayed in Results:"/>
-         <mx:TextInput id="customColumnName" width="300" restrict="A-Z a-z" borderColor="blue" />
-	    </mx:HBox>
-	    
+        <mx:Spacer height="5"/>   
+	    <mx:HBox x="20" horizontalGap="6" width="100%">
+         <mx:Label id="columnLabel" width="170" text="Please Enter Column Name :"/>
+              
+         <mx:TextInput id="customColumnName" width="250" restrict="0-9" borderColor="blue" focusOut="validateColumnName()"/>
+         <mx:ComboBox id="cb6" name="timeIntervalCb" dataProvider="{timeIntervalsDp}" width="100"  borderThickness="0" 
+         	borderColor="blue" prompt="--Select--" itemRenderer="mx.controls.Label" close="truncateLongText(event)"
+         	rowCount="10" toolTip=""/>
+         <mx:Label id="lb7" name="label6" width="100%"  height="30" color="blue" text="{timeIntrvalLabel}" fontStyle="normal" fontWeight="bold"/>
+	   </mx:HBox>
+	 
 	   <mx:HBox x="20" y="50">
 	      <mx:Button id="submitButton1" label="{buttonLabel}" click="submitData();"/>
           <mx:Button id="cancelButton" label="Cancel" click="removeMe();"/>  
